[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = "A starter template for django projects for OpenWit Technologies"
authors = ["CaduceusInc <opakunlejo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
django-allauth = "^0.47.0"
django-crispy-forms = "^1.13.0"
whitenoise = "^5.3.0"
python-decouple = "^3.5"
django-extensions = "^3.1.5"
Markdown = "^3.3.6"
django-filter = "^21.1"
django-debug-toolbar = "^3.2.4"
psycopg2 = "^2.9.3"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]
Django = "djangorestframework"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
