[tool.poetry]
name = "django-tatum"
version = "0.1.0"
description = "Empowering Web3 developers to build the apps of their dreams using Django"
authors = ["Wale Opakunle"]
readme = "readMe.rst"
packages = [{include = "django_tatum"}]

[tool.poetry.dependencies]
python = "^3.9"
PyJWT = "^2.5.0"
python-decouple = "^3.6"
django-extensions = "^3.2.1"
asgiref = "^3.5.2"
django-allauth = "^0.51.0"
django-crispy-forms = "^1.14.0"
django-debug-toolbar = "^3.6.0"
django-filter = "^22.1"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
oauthlib = "^3.2.1"
psycopg2 = "^2.9.3"
requests-oauthlib = "^1.3.1"
requests = "^2.28.1"
whitenoise = "^6.2.0"
gpt-engineer = "^0.0.9"
pip = "^23.2.1"
wheel = "^0.41.2"
twine = "^4.0.2"
nox = "^2023.4.22"
pre-commit = "3.3.3"
mypy = "1.3.0"
typeguard = "^4.1.5"
django-admin-interface = "^0.27.0"
psycopg2-binary = "2.9.5"
django-admin-tools = "^0.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
nox = "^2023.4.22"
pre-commit = "3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130
