[metadata]
name = "django_tatum"
version = "0.1"
author = caduceusInc
maintainer = caduceusInc
description = A Django app to integrate with Tatum API
long_description = file: README.rst
license = MIT
keywords = django tatum blockchain web3
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: